force-app/main/default/objects/custom_create368__c/custom_create368__c.object-meta.xml
<CustomObject>
    <label>Custom created object368</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects368</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>