force-app/main/default/objects/custom_create368__c/fields/custom_create_368field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_368field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 368field501</label>
    <type>Checkbox</type>
</CustomField>